--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.8",
+    "dotenv": "^16.0.1",
     "moralis": "^1.9.0",
     "moralis-v1": "^1.11.0",
     "react": "^18.2.0",
