--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "json-loader": "^0.5.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
   }
