--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "rentoken-react-moralis-marketplace",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.22.8",
-    "dotenv": "^16.0.1",
-    "moralis": "^1.9.0",
-    "moralis-v1": "^1.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "json-loader": "^0.5.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5"
-  }
+    "name": "rentoken-react-moralis-marketplace",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^4.7.0",
+        "@headlessui/react": "^1.6.6",
+        "@heroicons/react": "^1.0.6",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "antd": "^4.22.8",
+        "dotenv": "^16.0.2",
+        "moralis": "^1.9.0",
+        "moralis-v1": "^1.11.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-moralis": "^1.4.0",
+        "react-router": "^6.3.0",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "moralis:cloud": "moralis-admin-cli watch-cloud-folder --moralisApiKey beEnMtrQ22ERDEd --moralisApiSecret r8iMTvl8ajjeOOv --moralisSubdomain tm9ltqmmwggb.usemoralis.com --autoSave 1 --moralisCloudfolder ./src/cloudFunctions"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.7",
+        "json-loader": "^0.5.7",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.5"
+    }
 }
