--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "antd": "^4.22.8",
+        "bootstrap": "^5.2.1",
         "dotenv": "^16.0.2",
         "moralis": "^1.9.0",
         "moralis-v1": "^1.11.0",
