--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "moralis": "^1.9.0",
         "moralis-v1": "^1.11.0",
         "react": "^18.2.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
         "react-moralis": "^1.4.0",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
