deployer + minter + ethersjs

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REACT_APP_APP_ID = AaIPFNKQv3sxV60fNYz53a653g4FglMOmYrxxPo6
 REACT_APP_SERVER_URL = https://oegryd8yxw0z.usemoralis.com:2053/server
 REACT_APP_CHAIN_ID = 5
 REACT_APP_MASTERKEY = Ix34pcptMoKkcnO8hoo89dNPYwzXEwdPSkgyCW8J
+
+REACT_APP_OKEN_V1_RENTABLE_NFT_FACTORY_CONTRACT_ADDRESS = 0x9708806ba7e6d15dE97936361C3C6b6166E6A4a9
