--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "antd": "^4.22.8",
         "bootstrap": "^5.2.1",
         "dotenv": "^16.0.2",
+        "ethers": "^5.7.1",
         "moralis": "^1.9.0",
         "moralis-v1": "^1.11.0",
         "react": "^18.2.0",
