--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^1.3.2",
         "autoprefixer": "^10.4.7",
         "json-loader": "^0.5.7",
         "postcss": "^8.4.14",
